<resources>
    <!--<string name="app_name">Order Process</string>-->
    <string name="app_name">Munch Ado App</string>
    <string name="error_enter_name">Please enter Username.</string>
    <string name="error_enter_password">Please enter password.</string>
    <string name="error_valid__email">Please enter valid email.</string>
    <string name="error_password_length">You need to use at lest 6 characters.</string>
    <string name="error_email_register">Hey, you forgot something.</string>
    <string name="email_error">This doesn\'t look like any email we ever seen, Maybe the \'@\' or the \'.\' are in wrong spot. This isn\'t cubism, put things where they belong! </string>
    <string name="error_password_register">Woah, we cant let you go without a password.</string>
    <string name="network_error">No Internet Access</string>
    <string name="credentials_error">Invalid Credentials. Please try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="confirm">CONFIRM</string>
    <string name="change_time">Change Time</string>
    <string name="update_time">UPDATE TIME</string>
    <string name="print_order">PRINT ORDER</string>

    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target</string>
    <string name="title_interface">Interface</string>
    <string name="title_address">MAC/BD Address</string>
    <string name="title_devicetype">DeviceType</string>
    <string name="title_printername">Printer Name</string>
    <string name="btn_create_qrcode">Print QR Code</string>
    <string name="btn_restart">Restart</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Printer List</string>
    <string name="default_target">TCP:192.168.192.168</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="print_job_id">ABC123</string>
    <string name="title_err">Error</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="printername_m10">TM-m10</string>
    <string name="printername_m30">TM-m30</string>
    <string name="printername_p20">TM-P20</string>
    <string name="printername_p60ii">TM-P60II</string>
    <string name="printername_p80">TM-P80</string>
    <string name="printername_t88v">TM-T88V</string>
    <string name="printername_t88vi">TM-T88VI</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nIf cannot open roll paper cover, please open cutter cover, and turn knob in the direction of the arrow marked on the inside of the cutter cover until roll paper cover is opened.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <string name="order">ORDER</string>


    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to %1s</string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Reservation action message -->
    <string name="request_cancel" formatted="false">Thanks, we have sent your cancellation back to %1s and will guide him to other nearby places.</string>
    <string name="request_alternate_time" formatted="false">Thanks, we have sent your confirmation for an alternate time back to %1s. Once the user confirms, we will send you and update.\n\nIf you need to contact %2s, please go to the Bookings Archive and tap on this request.</string>
    <string name="request_confirm_booking" formatted="false">Thanks, we have sent your confirmation back to %1s. If you need to contact %2s, please go to the Bookings Archive and tap on this request.</string>
</resources>
