<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.munchado.orderprocess.ui.widgets.CustomTextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/cancel_order"
            android:textColor="@color/red_overview"
            android:textSize="@dimen/textSizeLarge"
            android:visibility="gone"
            app:textStyle="RobotoRegular" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <com.munchado.orderprocess.ui.widgets.CustomTextView
            android:id="@+id/text_print"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/margin_normal"
            android:gravity="center"
            android:text="@string/print_order"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/textSizeLarge"
            android:visibility="gone"
            app:textStyle="RobotoRegular" />

        <com.munchado.orderprocess.ui.widgets.CustomButton
            android:id="@+id/btn_action"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeLarge"
            android:visibility="gone"
            app:textStyle="RobotoRegular" />
    </LinearLayout>
</LinearLayout>